Fix background issue not showing all color.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 110%;
+  height: 100%;
   pointer-events: none;
 }
 
